jwt problem bug fix. Service token added.

--- a/backend/src/WebApi/appsettings.json
+++ b/backend/src/WebApi/appsettings.json
@@ -3,7 +3,7 @@
     "AutoServiceTrackingDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=AutoServiceTrackingDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   },
   "JwtSettings": {
-    "Audience": [ "www.authserver.com"],
+    "Audience": [ "www.authserver.com","www.webproject.com"],
     "Issuer": "www.authserver.com",
     "AccessTokenExpiration": 100,
     "RefreshTokenExpiration": 300,
