--- a/clients/web/AutoServiceTracking.Web.Dashboard/appsettings.json
+++ b/clients/web/AutoServiceTracking.Web.Dashboard/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "JwtSettings": {
-    "Audience": [ "www.authserver.com" ],
+    "Audience": [ "www.webproject.com" ],
     "Issuer": "www.authserver.com",
     "AccessTokenExpiration": 100,
     "RefreshTokenExpiration": 300,
