--- a/backend/src/Integrations/Integrations.csproj
+++ b/backend/src/Integrations/Integrations.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\shared\Shared\AutoServiceTracking.Shared\AutoServiceTracking.Shared.csproj" />
-    <ProjectReference Include="..\Integrations\Integrations.csproj" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
